--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ dependencies = [
     "pip-tools",
     "pytest",
     "requests",
-    "wexample-helpers>=0.0.34",
-    "wexample-prompt==0.0.33",
+    "wexample-helpers==0.0.52",
+    "wexample-prompt==0.0.34",
 ]
 
 [project.readme]
